--- a/reequest_system/Views/Hom/RQS.cshtml
+++ b/reequest_system/Views/Hom/RQS.cshtml
@@ -286,7 +286,7 @@
                     </div>
                 </form>
                 <div class="p-4">
-                    <h3>Order Tracking</h3>
+                    <h3>Request Status</h3>
                     <table class="table table-bordered track_tbl">
                         <thead>
                             <tr>
@@ -308,31 +308,32 @@
                                 <td class="track_dot">
                                     <span class="track_line"></span>
                                 </td>
-                                <td>01</td>
-                                <td>Dispatched from distibutor address</td>
+                                <td>Skip Plan level</td>
+                                <td>DSE 310 Multimedia & Web Design</td>
+                                <td>not yet</td>
                                 <td><button type="button" class="btn btn-secondary">pending</button></td>
-                                <td>31/07/2018 22:24:PM</td>
                             </tr>
                             <tr>
                                 <td class="track_dot">
                                     <span class="track_line"></span>
                                 </td>
-                                <td>01</td>
-                                <td>Dispatched from distibutor address</td>
-                                <td>
-                                    <div class="btn btn-danger"> rejected</div>
+                                <td>Skip pre Request</td>
+                                <td>SE 421 Internet Application</td>
+                                <td>Denied for not taking a pre-requisite</td>
+                                <td><div class="btn btn-danger"> rejected</div>
 
-                                </td>
-                                <td>31/07/2018 22:24:PM</td>
                             </tr>
                             <tr>
                                 <td class="track_dot">
                                     <span class="track_line"></span>
                                 </td>
-                                <td>01</td>
-                                <td>Dispatched from distibutor address</td>
+                                <td>Expand section</td>
+                                <td>
+                                    SE 206 Introduction To Software Engineering
+                                </td>
+                                <td>accepted</td>
                                 <td><div class="btn btn-success"</div>success</td>
-                                <td>31/07/2018 22:24:PM</td>
+
                             </tr>
                    
                         </tbody>
