--- a/reequest_system/Views/Hom/login.cshtml
+++ b/reequest_system/Views/Hom/login.cshtml
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="~/images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="~/images/icons/favicon.png"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="~/vendor_login/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
@@ -28,69 +28,71 @@
 <!--===============================================================================================-->
 </head>
 <body>
-  
-        
-            <div class="container-login100" style="background-image: url('../images/bg-01.jpg');">
-                <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                    <form class="login100-form validate-form">
-                        <figure>
-                            <img src="~/images/signup-image.jpg" alt="sing up image">
-                        </figure>
-                        <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
-                            <span class="label-input100">Username</span>
-                            <input class="input100" type="text" name="username" placeholder=" your name">
-                            <span class="focus-input100" data-symbol="&#xf206;"></span>
-                        </div>
 
-                        <div class="wrap-input100 validate-input" data-validate="Password is required">
-                            <span class="label-input100">Password</span>
-                            <input class="input100" type="password" name="pass" placeholder="your password">
-                            <span class="focus-input100" data-symbol="&#xf190;"></span>
-                        </div>
-
-                        <div class="text-right p-t-8 p-b-31">
-                            <a href="#">
-                                Forgot password?
-                            </a>
-                        </div>
-
-                        <div class="container-login100-form-btn">
-                            <div class="wrap-login100-form-btn">
-                                <div class="login100-form-bgbtn"></div>
-                                <button class="login100-form-btn">
-                                    Login
-                                </button>
-                            </div>
-                        </div>
+    
 
 
-
-                    </form>
+    <div class="container-login100" style="background-image: url('../images/bg-01.jpg');">
+        <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+            <form class="login100-form validate-form">
+                <figure>
+                    <img src="~/images/signup-image.jpg" alt="sing up image">
+                </figure>
+                <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
+                    <span class="label-input100">Username</span>
+                    <input class="input100" type="text" name="username" placeholder=" your name">
+                    <span class="focus-input100" data-symbol="&#xf206;"></span>
                 </div>
-            </div>
-       
 
-	
-	
+                <div class="wrap-input100 validate-input" data-validate="Password is required">
+                    <span class="label-input100">Password</span>
+                    <input class="input100" type="password" name="pass" placeholder="your password">
+                    <span class="focus-input100" data-symbol="&#xf190;"></span>
+                </div>
 
-	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
-	<script src="~/vendor_login/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="~/vendor_login/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script src="~/vendor_login/bootstrap/js/popper.js"></script>
-	<script src="~/vendor_login/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="~/vendor_login/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="~/vendor_login/daterangepicker/moment.min.js"></script>
-	<script src="~/vendor_login/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-	<script src="~/vendor_login/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script src="~/js/main.js"></script>
+                <div class="text-right p-t-8 p-b-31">
+                    <a href="#">
+                        Forgot password?
+                    </a>
+                </div>
+
+                <div class="container-login100-form-btn">
+                    <div class="wrap-login100-form-btn">
+                        <div class="login100-form-bgbtn"></div>
+                        <button class="login100-form-btn">
+                            Login
+                        </button>
+                    </div>
+                </div>
+
+
+
+            </form>
+        </div>
+    </div>
+
+
+
+
+
+    <div id="dropDownSelect1"></div>
+
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/bootstrap/js/popper.js"></script>
+    <script src="~/vendor_login/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/daterangepicker/moment.min.js"></script>
+    <script src="~/vendor_login/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/vendor_login/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/js/main.js"></script>
 
 </body>
 </html>
