crating table for instructor

--- a/reequest_system/Views/Home/stdn.cshtml
+++ b/reequest_system/Views/Home/stdn.cshtml
@@ -44,7 +44,7 @@
     <img src="https://opera.cba.edu.sa/OnlineAdmissionSys/Content/images/logo_transparent.svg" alt="Paris" width="250" height="250" >
     
 
-    <div class="container emp-profile">
+    <div class="container ">
         @*method="#*@
         <form>
             <div class="row">
