--- a/reequest_system/Views/Home/inr.cshtml
+++ b/reequest_system/Views/Home/inr.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+﻿<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"  id="bootstrap-css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 <link rel="stylesheet" type="text/css" href="~/css/exph.CSS">
@@ -242,7 +242,7 @@
                                 SE 206 Introduction To Software Engineering
                             </td>
                             <td>accepted</td>
-                            <td><div class="btn btn-success"</div>success</td>
+                            <td><div >class="btn btn-success"</div>success</td>
 
                         </tr>
 
