--- a/reequest_system/Views/Home/stdn.cshtml
+++ b/reequest_system/Views/Home/stdn.cshtml
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"  id="bootstrap-css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 <link rel="stylesheet" type="text/css" href="~/css/exph.CSS">
@@ -44,7 +44,7 @@
     <img src="https://opera.cba.edu.sa/OnlineAdmissionSys/Content/images/logo_transparent.svg" alt="Paris" width="250" height="250" >
     
 
-    <div class="container ">
+    <div class="container emp-profile">
         @*method="#*@
         <form>
             <div class="row">
