layout Edit and new faculty page

--- a/reequest_system/Views/Home/login.cshtml
+++ b/reequest_system/Views/Home/login.cshtml
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
     
-    <title>Login V4</title>
+    <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -28,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/main.css">
     <!--===============================================================================================-->
 </head>
-<body>
+
    
 
 
@@ -94,6 +93,3 @@
     <script src="~/vendor_login/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
     <script src="~/js/main.js"></script>
-
-</body>
-</html>
