--- a/reequest_system/Views/Shared/_Layout.cshtml
+++ b/reequest_system/Views/Shared/_Layout.cshtml
@@ -1,6 +1,14 @@
-﻿<div >
-    @Html.Partial("_nav")
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title></title>
+</head>
+<body>
+    <div>
+        @Html.Partial("_nav")
 
-</div>
+    </div>
 
-@RenderBody()
+    @RenderBody()
+
+</body>
+</html>
