--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -1,12 +1,10 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Faculty</title>
 </head>
-<body>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> -->
     <!--<link rel="stylesheet" href="https://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -175,6 +173,3 @@
 
             </script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-</body>
-</html>
