some code arrangment and _footer and _links added

--- a/reequest_system/Views/Shared/_nav.cshtml
+++ b/reequest_system/Views/Shared/_nav.cshtml
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="main_nav">
             <ul class="navbar-nav @*ms-auto*@">
                 <li class="nav-item"><a class="nav-link" href="/Home/stdn">Student </a></li>
-                <li class="nav-item"><a class="nav-link" href="/Home/inr">Instroctor </a></li>
+                <li class="nav-item"><a class="nav-link" href="/Home/Faculty">Instroctor </a></li>
                 <li class="nav-item"><a class="nav-link" href="/Home/login">Login </a></li>
             </ul>
         </div> <!-- navbar-collapse.// -->
