--- a/reequest_system/Views/Home/login.cshtml
+++ b/reequest_system/Views/Home/login.cshtml
@@ -1,36 +1,9 @@
 
-<head>
-    
     <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="~/images/icons/favicon.png" />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/bootstrap/css/bootstrap.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/fonts/iconic/css/material-design-iconic-font.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/animate/animate.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/css-hamburgers/hamburgers.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/animsition/css/animsition.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/select2/select2.min.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/vendor_login/daterangepicker/daterangepicker.css">
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/css/main_login.css">
-    <link rel="stylesheet" type="text/css" href="~/css/main.css">
-    <!--===============================================================================================-->
-</head>
 
    
-
-
 
     <div class="container-login100" style="background-image: url('../images/bg-01.jpg');">
         <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
@@ -38,15 +11,16 @@
                 <figure>
                     <img src="~/images/signup-image.jpg" alt="sing up image">
                 </figure>
-                <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
+                <div class="wrap-input100 validate-input m-b-23" data-validate="Username ">
                     <span class="label-input100">Username</span>
-                    <input class="input100" type="text" name="username" placeholder=" your name">
+                    <input class="input100" type="text" name="username" placeholder=" Enter Username">
                     <span class="focus-input100" data-symbol="&#xf206;"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Password is required">
                     <span class="label-input100">Password</span>
-                    <input class="input100" type="password" name="pass" placeholder="your password">
+
+                    <input  class="input100" type="password" name="pass" placeholder="Enter Password">
                     <span class="focus-input100" data-symbol="&#xf190;"></span>
                 </div>
 
