--- a/reequest_system/Views/Shared/_Layout.cshtml
+++ b/reequest_system/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    
+    @Html.Partial("_links")
+
 </head>
 <body>
     <div>
@@ -10,5 +12,6 @@
 
     @RenderBody()
 
+    @Html.Partial("_Footer")
 </body>
 </html>
