--- a/reequest_system/Views/Home/stdn.cshtml
+++ b/reequest_system/Views/Home/stdn.cshtml
@@ -303,7 +303,7 @@
                                 SE 206 Introduction To Software Engineering
                             </td>
                             <td>accepted</td>
-                            <td><div >class="btn btn-success"</div>success</td>
+                            <td><div class="btn btn-success"> accepted</div>
 
                         </tr>
 
