--- a/reequest_system/Views/Home/login.cshtml
+++ b/reequest_system/Views/Home/login.cshtml
@@ -1,69 +1,94 @@
 
-    <title>Login</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Login</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-   
 
-    <div class="container-login100" style="background-image: url('../images/bg-01.jpg');">
-        <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-            <form class="login100-form validate-form">
-                <figure>
-                    <img src="~/images/signup-image.jpg" alt="sing up image">
-                </figure>
-                <div class="wrap-input100 validate-input m-b-23" data-validate="Username ">
-                    <span class="label-input100">Username</span>
-                    <input class="input100" type="text" name="username" placeholder=" Enter Username">
-                    <span class="focus-input100" data-symbol="&#xf206;"></span>
+
+<div class="container-login100" style="background-image: url('../images/bg-01.jpg');">
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+        <form class="login100-form validate-form" id="frmLogin">
+            <figure>
+                <img src="~/images/signup-image.jpg" alt="sing up image">
+            </figure>
+            <div class="wrap-input100 validate-input m-b-23" data-validate="Username ">
+                <span class="label-input100">Username</span>
+                <input class="input100" type="text" id="username" name="username" placeholder=" Enter Username">
+                <span class="focus-input100" data-symbol="&#xf206;"></span>
+            </div>
+
+            <div class="wrap-input100 validate-input" data-validate="Password is required">
+                <span class="label-input100">Password</span>
+
+                <input class="input100" type="password" id="psw" name="psw" placeholder="Enter Password">
+                <span class="focus-input100" data-symbol="&#xf190;"></span>
+            </div>
+
+            <div class="text-right p-t-8 p-b-31">
+                <a href="#">
+                    Forgot password?
+                </a>
+            </div>
+
+            <div class="container-login100-form-btn">
+                <div class="wrap-login100-form-btn">
+                    <div class="login100-form-bgbtn"></div>
+                    <button type="submit" class="login100-form-btn">
+                        Login
+                    </button>
                 </div>
-
-                <div class="wrap-input100 validate-input" data-validate="Password is required">
-                    <span class="label-input100">Password</span>
-
-                    <input  class="input100" type="password" name="pass" placeholder="Enter Password">
-                    <span class="focus-input100" data-symbol="&#xf190;"></span>
-                </div>
-
-                <div class="text-right p-t-8 p-b-31">
-                    <a href="#">
-                        Forgot password?
-                    </a>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <div class="wrap-login100-form-btn">
-                        <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn">
-                            Login
-                        </button>
-                    </div>
-                </div>
+            </div>
 
 
 
-            </form>
-        </div>
+        </form>
     </div>
+</div>
 
 
 
 
 
-    <div id="dropDownSelect1"></div>
+<div id="dropDownSelect1"></div>
 
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/animsition/js/animsition.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/bootstrap/js/popper.js"></script>
-    <script src="~/vendor_login/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/select2/select2.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/daterangepicker/moment.min.js"></script>
-    <script src="~/vendor_login/daterangepicker/daterangepicker.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/vendor_login/countdowntime/countdowntime.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/js/main.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/bootstrap/js/popper.js"></script>
+<script src="~/vendor_login/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/daterangepicker/moment.min.js"></script>
+<script src="~/vendor_login/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+<script src="~/vendor_login/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+<script src="~/js/main.js"></script>
+
+
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            $('#frmLogin').submit(function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: '/Home/verifiy',
+                    type: 'POST',
+                    data: $('#frmLogin').serialize(),
+                    success: function (resp) {
+                        if (resp.status == true) {
+                            alert('You have successfully signed in.');
+                            window.location = '/Home/Faculty';
+                        } else {
+                            alert('Please enter valid email and password.');
+                        }
+                    }
+                });
+            })
+        });
+    </script>
+}
