--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -23,7 +23,8 @@
                         <div class="card-block text-center text-white">
                             <div class="m-b-25"> <img src="https://www.ubt.edu.sa/assets/clg/img/dean1.png" class="img-radius" alt="User-Profile-Image width="100" height="100 "> </div>
                             <h6 class="f-w-600">Hembo Tingor</h6>
-                            <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                            <p>Web Designer</p>
+                            @*<i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>*@
                         </div>
                     </div>
                     <div class="col-sm-8">
@@ -96,30 +97,6 @@
                                         <td>66</td>
                                         <td data-order="1231718400">Mon 12th Jan 09</td>
                                         <td data-order="86000">$86,000/y</td>
-                                    </tr>
-                                    <tr>
-                                        <td data-search="Cedric Kelly">C. Kelly</td>
-                                        <td>Senior Javascript Developer</td>
-                                        <td>Edinburgh</td>
-                                        <td>22</td>
-                                        <td data-order="1332979200">Thu 29th Mar 12</td>
-                                        <td data-order="433060">$433,060/y</td>
-                                    </tr>
-                                    <tr>
-                                        <td data-search="Airi Satou">A. Satou</td>
-                                        <td>Accountant</td>
-                                        <td>Tokyo</td>
-                                        <td>33</td>
-                                        <td data-order="1227830400">Fri 28th Nov 08</td>
-                                        <td data-order="162700">$162,700/y</td>
-                                    </tr>
-                                    <tr>
-                                        <td data-search="Brielle Williamson">B. Williamson</td>
-                                        <td>Integration Specialist</td>
-                                        <td>New York</td>
-                                        <td>61</td>
-                                        <td data-order="1354406400">Sun 2nd Dec 12</td>
-                                        <td data-order="372000">$372,000/y</td>
                                     </tr>
                             </table>
 
