--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -65,39 +65,35 @@
                             <table id="example" class="display" style="width:100%">
                                 <thead style="background-color: rgba(214, 214, 218, 0.986);">
                                     <tr>
-                                        <th>Name</th>
-                                        <th>Position</th>
-                                        <th>Office</th>
-                                        <th>Age</th>
-                                        <th>Start date</th>
-                                        <th>Salary</th>
+                                        <th>Student-Name</th>
+                                        <th>Course</th>
+                                        <th>Request type</th>
+                                        <th>Justification</th>
+                                        <th>Date Of Request</th>
+                                        <th>Request Status</th>
+                                        <th>Reason</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td data-search="Tiger Nixon">T. Nixon</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
-                                        <td>61</td>
-                                        <td data-order="1303689600">Mon 25th Apr 11</td>
-                                        <td data-order="320800">$320,800/y</td>
+                                        <td data-search="Anas Hajar">Anas Hajar</td>
+                                        <td>SE-421</td>
+                                        <td>Exception</td>
+                                        <td>I'm a senior and i only have this course left</td>
+                                        <td> <div class="btn btn-danger">reject</div> <div class="btn btn-success"> accept</div></td>
+                                        <td data-order="320800">........</td>
+                                        <td data-order="320800">........</td>
                                     </tr>
                                     <tr>
                                         <td data-search="Garrett Winters">G. Winters</td>
                                         <td>Accountant</td>
                                         <td>Tokyo</td>
                                         <td>63</td>
-                                        <td data-order="1311552000">Mon 25th Jul 11</td>
-                                        <td data-order="170750">$170,750/y</td>
+                                        <td width="30%">  <button class="btn btn-danger">reject</button> <button class="btn btn-success"> accept</button></td>
+                                        <td data-order="170750">........</td>
+                                        <td data-order="320800">........</td>
                                     </tr>
-                                    <tr>
-                                        <td data-search="Ashton Cox">A. Cox</td>
-                                        <td>Junior Technical Author</td>
-                                        <td>San Francisco</td>
-                                        <td>66</td>
-                                        <td data-order="1231718400">Mon 12th Jan 09</td>
-                                        <td data-order="86000">$86,000/y</td>
-                                    </tr>
+                                    
                             </table>
 
                         </div>
