--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -21,7 +21,8 @@
                 <div class="row m-l-0 m-r-0">
                     <div class="col-sm-4 bg-c-lite-green user-profile">
                         <div class="card-block text-center text-white">
-                            <div class="m-b-25"> <img src="https://www.ubt.edu.sa/assets/clg/img/dean1.png" class="img-radius" alt="User-Profile-Image width="100" height="100 "> </div>
+                            @* img edit  *@
+                            <div class="m-b-25"> <img src="https://www.ubt.edu.sa/assets/clg/img/dean1.png" class="img-radius" alt="User-Profile-Image" width="100" height="100 "> </div>
                             <h6 class="f-w-600">Hembo Tingor</h6>
                             <p>Web Designer</p>
                             @*<i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>*@
