--- a/reequest_system/Views/Home/stdn.cshtml
+++ b/reequest_system/Views/Home/stdn.cshtml
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    <img src="~/images/student-graduation(1).jpg" alt="" />
+                    @*<img src="~/images/student-graduation(1).jpg" alt="" />*@
 
                 </div>
             </div>
