--- a/reequest_system/Views/Shared/_nav.cshtml
+++ b/reequest_system/Views/Shared/_nav.cshtml
@@ -5,11 +5,30 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main_nav">
-            <ul class="navbar-nav @*ms-auto*@">
+            <ul class="navbar-nav navbar-left ">
                 <li class="nav-item"><a class="nav-link" href="/Home/stdn">Student </a></li>
                 <li class="nav-item"><a class="nav-link" href="/Home/Faculty">Instroctor </a></li>
-                <li class="nav-item"><a class="nav-link" href="/Home/login">Login </a></li>
-            </ul>
+                </ul>
+                <ul class="navbar-nav navbar-right ">
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item"><a class="nav-link" href="/Auth/logout">Logout</a></li>
+
+                    }
+                    else
+                    {
+                        <li class="nav-item"><a class="nav-link" href="/Auth/login">Login </a></li>
+
+                    }
+
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item "><a class="nav-link" href="javascript:void(0)">Welcome @User.Identity.Name </a></li>
+                    }
+                </ul>
+
+            
         </div> <!-- navbar-collapse.// -->
     </div> <!-- container-fluid.// -->
 </nav>
