--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -1,4 +1,10 @@
-﻿
+﻿@using reequest_system.Models
+@{
+    Faculty facultyinfo = Model.facultyinfo;
+    Collage collegeInfo = Model.collegeInfo;
+    CollageMajor majoreInfo = Model.majoreInfo;
+
+}
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +29,7 @@
                         <div class="card-block text-center text-white">
                             @* img edit  *@
                             <div class="m-b-25"> <img src="https://www.ubt.edu.sa/assets/clg/img/dean1.png" class="img-radius" alt="User-Profile-Image" width="100" height="100 "> </div>
-                            <h6 class="f-w-600">Hembo Tingor</h6>
+                            <h6 class="f-w-600">@facultyinfo.FcyName</h6>
                             <p style="color:white">Web Designer</p>
                             @*<i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>*@
                         </div>
@@ -33,23 +39,23 @@
                             <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <p class="m-b-10 f-w-600">Email</p>
-                                    <h6 class="text-muted f-w-400">rntng@gmail.com</h6>
+                                    <p class="m-b-10 f-w-600">Date of birth</p>
+                                    <h6 class="text-muted f-w-400">@facultyinfo.Dob</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="m-b-10 f-w-600">Phone</p>
-                                    <h6 class="text-muted f-w-400">98979989898</h6>
+                                    <p class="m-b-10 f-w-600">Nationality</p>
+                                    <h6 class="text-muted f-w-400">@facultyinfo.NationalityId</h6>
                                 </div>
                             </div>
                             <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <p class="m-b-10 f-w-600">Recent</p>
-                                    <h6 class="text-muted f-w-400">Sam Disuja</h6>
+                                    <p class="m-b-10 f-w-600">collage</p>
+                                    <h6 class="text-muted f-w-400">@collegeInfo.ClgName</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="m-b-10 f-w-600">Most Viewed</p>
-                                    <h6 class="text-muted f-w-400">Dinoter husainm</h6>
+                                    <p class="m-b-10 f-w-600"> major </p>
+                                    <h6 class="text-muted f-w-400">@majoreInfo.MjrName</h6>
                                 </div>
                             </div>
                             <!-- END MENU -->
@@ -94,7 +100,7 @@
                                         <td data-order="170750">........</td>
                                         <td data-order="320800">........</td>
                                     </tr>
-                                    
+
                             </table>
 
                         </div>
